dev/manifests/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: octantis-gateway
      namespace: octantis
  hostnames:
    - "grafana.octantis.cluster.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prom-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-octantis-gateway
  namespace: monitoring
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: monitoring
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: octantis-gateway
